{
  "version": 4,
  "terraform_version": "0.12.15",
  "serial": 12,
  "lineage": "6c2206a6-3b5c-9877-b6d0-855f95233c05",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045fa58af83eb0ff4",
            "arn": "arn:aws:ec2:eu-west-3:096312773294:instance/i-0cc0242aea9e3b51f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0cc0242aea9e3b51f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "admin",
            "monitoring": false,
            "primary_network_interface_id": "eni-06782037a77d0ad83",
            "private_dns": "ip-172-31-23-96.eu-west-3.compute.internal",
            "private_ip": "172.31.23.96",
            "public_dns": "ec2-35-180-19-172.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.19.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0423e311af6ed8128",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b95a1ac2",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05cbe368"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.lab21"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00d60dee3f3145e60",
            "owner_id": "096312773294",
            "tags": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0d4f35162fb25a394"
          },
          "dependencies": [
            "aws_vpc.lab21"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routertab",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08408ceec7de1d444",
            "owner_id": "096312773294",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00d60dee3f3145e60",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyRouteToInternet"
            },
            "vpc_id": "vpc-0d4f35162fb25a394"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.lab21"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f3d111d910305bf",
            "route_table_id": "rtb-08408ceec7de1d444",
            "subnet_id": "subnet-0c026f6a08b7d1c0a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.routertab",
            "aws_subnet.httpsubnet",
            "aws_vpc.lab21"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_httpandssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:096312773294:security-group/sg-0e72498cd18e75253",
            "description": "Allow http and ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e72498cd18e75253",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_httpandssh",
            "name_prefix": null,
            "owner_id": "096312773294",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d4f35162fb25a394"
          },
          "dependencies": [
            "aws_vpc.lab21"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "httpsubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:096312773294:subnet/subnet-0c026f6a08b7d1c0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0c026f6a08b7d1c0a",
            "map_public_ip_on_launch": false,
            "owner_id": "096312773294",
            "tags": {
              "Name": "httpsubnet"
            },
            "vpc_id": "vpc-0d4f35162fb25a394"
          },
          "dependencies": [
            "aws_vpc.lab21"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab21",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:096312773294:vpc/vpc-0d4f35162fb25a394",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0886031a4ea5f6fbd",
            "default_route_table_id": "rtb-04e12003f5dc8df6f",
            "default_security_group_id": "sg-0863a9dfeb0ec2212",
            "dhcp_options_id": "dopt-6d0c0704",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d4f35162fb25a394",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04e12003f5dc8df6f",
            "owner_id": "096312773294",
            "tags": {
              "Name": "lab 2.1 VPC"
            }
          }
        }
      ]
    }
  ]
}